--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <!-- Razorpay -->
-  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-
   <!-- Main CSS -->
   <link rel="stylesheet" href="style.css">
 
@@ -40,9 +37,6 @@
 
         <li id="loginLink"><a onclick="showPage('login')">Login</a></li>
         <li id="registerLink"><a onclick="showPage('register')">Register</a></li>
-        
-        <li id="wishlistLink" class="hidden"><a onclick="showPage('wishlist')"><i class="fas fa-heart"></i> Wishlist</a></li>
-        <li id="ordersLink" class="hidden"><a onclick="showPage('orders')"><i class="fas fa-history"></i> Orders</a></li>
         <li id="logoutLink" class="hidden"><a onclick="logout()">Logout</a></li>
 
         <li class="cart-icon" onclick="showPage('cart')">
@@ -173,7 +167,7 @@
         <button class="btn">Login</button>
 
         <div class="auth-link">
-          Don't have an account? <a onclick="showPage('register')">Register</a>
+          Don’t have an account? <a onclick="showPage('register')">Register</a>
         </div>
       </form>
     </div>
@@ -208,16 +202,6 @@
     </div>
   </div>
 
-  <!-- Wishlist Page -->
-  <div id="wishlistPage" class="hidden">
-    <section class="content-section">
-      <h2>My Wishlist</h2>
-      <div class="container">
-        <div class="productsContainer" id="wishlistContainer"></div>
-      </div>
-    </section>
-  </div>
-
   <!-- Cart Page -->
   <div id="cartPage" class="hidden">
     <div class="cart-container">
@@ -227,68 +211,11 @@
     </div>
   </div>
 
-  <!-- Orders Page -->
-  <div id="ordersPage" class="hidden">
-    <section class="content-section">
-      <h2>Order History</h2>
-      <div class="orders-container" id="ordersContainer"></div>
-    </section>
-  </div>
-
   <!-- Product Modal -->
   <div id="productModal" class="modal">
     <div class="modal-content">
       <button class="modal-close" onclick="closeModal()">&times;</button>
       <div class="modal-body" id="modalBody"></div>
-    </div>
-  </div>
-
-  <!-- Checkout Modal -->
-  <div id="checkoutModal" class="modal">
-    <div class="modal-content">
-      <button class="modal-close" onclick="closeCheckoutModal()">&times;</button>
-      <div class="modal-body">
-        <h2>Shipping Details</h2>
-        <form onsubmit="processCheckout(event)" id="checkoutForm">
-          <div class="form-group">
-            <label>Full Name *</label>
-            <input type="text" id="fullName" required>
-          </div>
-
-          <div class="form-group">
-            <label>Address *</label>
-            <textarea id="address" rows="3" required style="width:100%; padding:0.8rem; border:2px solid #ddd; border-radius:8px; font-family: 'Playfair Display', serif;"></textarea>
-          </div>
-
-          <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
-            <div class="form-group">
-              <label>City *</label>
-              <input type="text" id="city" required>
-            </div>
-
-            <div class="form-group">
-              <label>State *</label>
-              <input type="text" id="state" required>
-            </div>
-          </div>
-
-          <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
-            <div class="form-group">
-              <label>Pincode *</label>
-              <input type="text" id="pincode" pattern="[0-9]{6}" required>
-            </div>
-
-            <div class="form-group">
-              <label>Phone *</label>
-              <input type="tel" id="phone" pattern="[0-9]{10}" required>
-            </div>
-          </div>
-
-          <button type="submit" class="btn" style="width: 100%; margin-top: 1rem;">
-            <i class="fas fa-credit-card"></i> Proceed to Payment
-          </button>
-        </form>
-      </div>
     </div>
   </div>
 
